# pyluzapp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/luzapp/: __init__.py  git.py  repo.py
src/luzapp/export/: break_splitter.py  ics.py
src/luzapp/models/: color.py  lesson.py  school.py  week.py
src/luzapp/operations/: __init__.py  id_gen.py  lesson_ops.py  school_ops.py  week_ops.py
src/luzapp/serializers/: lesson_serializer.py  school_serializer.py  week_serializer.py
src/luzapp/translations/: base.py  dict_translator.py
tests/: conftest.py  test_repo.py
tests/fixtures/: config.school
tests/fixtures/weeks/week01/: week01.luzng
tests/fixtures/weeks/week01/_obj/: 1042328123.luzngl  1076807964.luzngl
tests/test_export/: test_break_splitter.py  test_ics.py
tests/test_models/: test_color.py  test_lesson.py  test_school.py  test_week.py
tests/test_operations/: test_id_gen.py  test_lesson_ops.py  test_school_ops.py  test_week_ops.py
tests/test_serializers/: test_lesson_serializer.py  test_school_serializer.py  test_week_serializer.py
tests/test_translations/: test_dict_translator.py
