[project]
name = "luzapp"
version = "0.2.1"
description = "Luzapp management library"
readme = "README.md"
authors = [
    { name = "Rotem Moses", email = "rootatkali4@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
